--- a/sass/pages/_palette.scss
+++ b/sass/pages/_palette.scss
@@ -88,7 +88,7 @@ nav a {
 
     @media (min-width:768px) {
       margin-bottom: 4px;
-      margin-left: 35px;
+      margin-left: 40px;
     }
   }
 
@@ -172,6 +172,17 @@ nav a {
 
           .ingridiant {
             margin-top: 8px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            width: 230px;
+
+            @media(min-width:992px ) {
+              text-overflow:none;
+              white-space: wrap;
+              overflow:none;
+              width: 100%;
+            }
           }
         }
 
@@ -180,7 +191,7 @@ nav a {
           flex-direction: column;
           justify-content: flex-end;
           align-items: center;
-          width: 70px;
+          width: 55px;
           height: 100%;
 
           .price {
@@ -251,16 +262,20 @@ nav a {
   animation: fade-animation ease 1s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  &:nth-child(1){
+
+  &:nth-child(1) {
     animation-delay: 0s;
   }
-  &:nth-child(2){
+
+  &:nth-child(2) {
     animation-delay: 100ms;
   }
-  &:nth-child(3){
+
+  &:nth-child(3) {
     animation-delay: 200ms;
   }
-  &:nth-child(4){
+
+  &:nth-child(4) {
     animation-delay: 300ms;
   }
 }
